fixed toolbar not responsive bug

--- a/project-starter/demo/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/project-starter/demo/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -23,7 +23,7 @@
 
 
 @media (max-width: 499px) {
-    .DesktopOnlyToolbar {
+    .DesktopOnly {
         display: none;
     }
 }
